[package]
name = "brc"
version = "0.1.0"
edition = "2021"
default-run = "brc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bstr = "1.9.0"
fast-float = "0.2.0"
memchr = "2.7.1"
memmap = "0.7.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.9.0"
rustc-hash = "1.1.0"
smol_str = "0.2.0"

[profile.release]
lto = "fat"
codegen-units = 1


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_1brc"
harness = false
